--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Sorter</title>
+  </head>
+  <body>
+    <header>
+      <h1>Sorter Visualizer</h1>
+    </header>
+    <div class="attributes">
+      <div id="form-bar">
+        <div>
+          <label for="typeOf">Type of Sort</label>
+          <select id="typeOf">
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+          </select>
+        </div>
+        <div><label for="input-length">Choose the length of the Array</label>
+        <select id="input-length">
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+        </select>
+    </div>
+        <div>
+            <label for="input">Choose the length of elements</label>
+        <select  id="input">
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+        </select>
+        </div>
+        <button class="createArrBtn">New Array</button>
+    </div>
+    </div>
+    <div>
+        <button class="sortBtn"><h1>Sort</h1></button>
+    </div>
+    <div class="graph" id="box">
+       
+    </div>
+    <script src="index.js">
+        
+    </script>
+  </body>
+  
+</html>
