--- a/index.html
+++ b/index.html
@@ -15,38 +15,34 @@
         <div>
           <label for="typeOf">Type of Sort</label>
           <select id="typeOf">
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option value="20">20</option>
+            <option value="bubble">Bubble</option>
+            <option value="inseertion">Insertion</option>
+            <option value="selection">Selection</option>
           </select>
         </div>
-        <div><label for="input-length">Choose the length of the Array</label>
-        <select id="input-length">
-          <option value="5">5</option>
-          <option value="10">10</option>
-          <option value="20">20</option>
-        </select>
-    </div>
         <div>
-            <label for="input">Choose the length of elements</label>
-        <select  id="input">
-          <option value="5">5</option>
-          <option value="10">10</option>
-          <option value="20">20</option>
-        </select>
+          <label for="input-length">Choose the length of the Array</label>
+          <select id="input-length">
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="30">30</option>
+          </select>
         </div>
+        <div>
+            <label for="input-multiplier">Choose the length of the Array</label>
+            <select id="input-multiplier">
+              <option value="300">1x</option>
+              <option value="200">2x</option>
+              <option value="100">3x</option>
+            </select>
+          </div>
         <button class="createArrBtn">New Array</button>
-    </div>
-    </div>
-    <div>
+
         <button class="sortBtn"><h1>Sort</h1></button>
+      </div>
     </div>
-    <div class="graph" id="box">
-       
-    </div>
-    <script src="index.js">
-        
-    </script>
+
+    <div class="graph" id="box"></div>
+    <script src="index.js"></script>
   </body>
-  
 </html>
